--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,6 +92,14 @@
 	-fx-background-color:#f2f2f2;
 }
 
+.choice-box {
+	-fx-background-color: #bdbdbd;
+	-fx-font-size: 11.0px;
+	-fx-text-fill: #000000;
+	-fx-font-weight: bold;
+	-fx-border-radius: 2px 2px 2px 2px;
+}
+
 .menu-button .label{
 	-fx-background-color: #bdbdbd;
 	-fx-font-size: 11.0px;
