--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
@@ -62,7 +63,10 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="468.0" prefHeight="18.0" prefWidth="139.0" progress="0.0" visible="false" />
+      <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="468.0" prefHeight="18.0" prefWidth="139.0" visible="false">
+         <effect>
+            <Blend />
+         </effect></ProgressBar>
       <ChoiceBox fx:id="languageSelector" layoutX="295.0" layoutY="14.0" prefHeight="25.0" prefWidth="94.0" />
       
 	</children>
