--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -41,7 +41,7 @@
 				<TextField fx:id="txtHost" layoutY="100.0" prefWidth="173.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
 			</children>
 		</Group>
-		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="false" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="425.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" text="%btn.enter" textOverrun="ELLIPSIS" underline="false" visible="true">
+		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="true" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="425.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" text="%btn.enter" textOverrun="ELLIPSIS" underline="false" visible="true">
 			<font>
 				<Font size="14.0" fx:id="x2" />
 			</font>
@@ -63,10 +63,6 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="468.0" prefHeight="18.0" prefWidth="139.0" visible="false">
-         <effect>
-            <Blend />
-         </effect></ProgressBar>
       <ChoiceBox fx:id="languageSelector" layoutX="295.0" layoutY="14.0" prefHeight="25.0" prefWidth="94.0" />
       
 	</children>
