--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,3 +165,15 @@
 #loginLabels {
 	-fx-font-weight: bold;
 }
+
+.choice-box {
+    -fx-pref-width: 100;
+}
+
+.choice-box .menu-item > .label {
+    -fx-pref-width: 100;
+}
+
+.list-cell:disabled {
+    -fx-opacity: 0.5;
+}
