--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -94,9 +94,9 @@
                               <ListView fx:id="listParticipants" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
                            </center>
                         </BorderPane>
-                        <TabPane tabMinWidth="100.0" GridPane.rowIndex="1">
+                        <TabPane fx:id="tabPane" tabMinWidth="100.0" GridPane.rowIndex="1">
                            <tabs>
-                              <Tab fx:id="tabUbuGrades" closable="false" text="UBUGrades">
+                              <Tab fx:id="tabUbuGrades" closable="false" text="%tab.grades">
                                  <content>
                                     <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                                        <top>
@@ -115,22 +115,20 @@
                                     </BorderPane>
                                  </content>
                               </Tab>
-                              <Tab fx:id="tabUbuLogs" closable="false" text="UBULogs">
+                              <Tab fx:id="tabUbuLogs" closable="false" text="%tab.logs">
                                  <content>
                                     <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                                       <center>
-                                          <TreeView fx:id="tvwGradeReport1" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-                                       </center>
                                        <top>
                                           <Pane minHeight="63.0" prefHeight="63.0" prefWidth="250.0" BorderPane.alignment="CENTER">
                                              <children>
-                                                <Label layoutX="8.0" layoutY="6.0" text="%label.categoryitem" />
-                                                <TextField fx:id="tfdItems1" layoutX="8.0" layoutY="30.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
-                                                <Label layoutX="123.0" layoutY="36.0" text="%label.type" />
-                                                <MenuButton fx:id="slcType1" layoutX="160.0" layoutY="32.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="%btn.type" />
+                                                <Label layoutY="21.0" text="%label.component" />
+                                                <TextField fx:id="componentTextField" layoutX="128.0" layoutY="16.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
                                              </children>
                                           </Pane>
                                        </top>
+                                       <center>
+                                          <ListView fx:id="listViewComponents" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                                       </center>
                                     </BorderPane>
                                  </content>
                               </Tab>
@@ -152,20 +150,47 @@
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-                        <DatePicker editable="false" showWeekNumbers="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Label text="%label.startdate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                        <Label text="%label.enddate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-                        <DatePicker layoutX="10.0" layoutY="4.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <Button mnemonicParsing="false" text="%btn.filter" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                        <Label text="%label.groupbydate" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                        <ChoiceBox fx:id="choiceBoxDate" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
+                        <DatePicker fx:id="datePickerStart" editable="false" showWeekNumbers="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                        <Label text="%label.startdate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <Label text="%label.enddate" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                        <Button mnemonicParsing="false" onAction="#saveFilterLogs" text="%btn.filter" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                        <Label text="%label.groupbydate" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                        <DatePicker fx:id="datePickerEnd" editable="false" showWeekNumbers="true" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                           <children>
+                              <Label text="%label.actualgroupbydate" />
+                              <Label fx:id="actualGroupByLabel" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <children>
+                              <Label text="%label.actualstartdate" />
+                              <Label fx:id="actualStartLabel">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                           <children>
+                              <Label fx:id="actualEndLabel" text="%label.actualenddate" />
+                              <Label fx:id="actualEndLabel" />
+                           </children>
+                        </HBox>
                      </children>
+                     <BorderPane.margin>
+                        <Insets />
+                     </BorderPane.margin>
                   </GridPane>
                </bottom>
                <center>
