--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,12 @@
 
 .button:hover{
 	-fx-background-color: #6ff9ff;
+	-fx-scale-y: 1.1;
+}
+
+.button:pressed {
+    -fx-scale-y: 0.9;
+    -fx-scale-x: 0.9;
 }
 
 .root {
